# ReactionGraphNeuralNetwork

./: .gitignore  LICENSE  README.md  pyproject.toml  script.py
examples/: 0204-Vrandom_pretrain.ipynb
rgnn/: __init__.py  plot.py
rgnn/common/: configuration.py  keys.py  registry.py  typing.py
rgnn/graph/: atoms.py  neighbor_list.py  reaction.py  utils.py
rgnn/graph/dataset/: atoms.py  reaction.py
rgnn/models/: __init__.py  builder.py  reaction.py  reaction_p.py  reaction_p_v2.py
rgnn/models/dqn/: __init__.py  base.py  dqn.py  dqn_old.py  dqn_positional_encoding.py  dqn_v2.py  reaction_p.py  time.py
rgnn/models/nn/: cutoff.py  mlp.py  pool.py  radial_basis.py  scale.py
rgnn/models/nn/painn/: interaction.py  representation.py
rgnn/models/reaction_models/: __init__.py  base.py  painn.py  painn_old.py  painn_v0.py  painn_v2.py  utils.py
rgnn/train/: __init__.py  loss.py  trainer.py  utils.py
