[project]
description = "Graph Neural Network to predict the reaction related properties for reinforcement learning"
name = "rgnn"
readme = "README.md"

classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "numpy>=1.22.4",
  "scipy>=1.7.1",
  "sympy>=1.8",
  "matplotlib>=3.4.3",
  "ase>=3.22.1",
  "networkx>=2.7.1",
  "pymatgen>=2022.5.26",
  "inflection",
  "e3nn==0.4.4",
  "rich",
  "tensorboard",
  "matscipy",
]
dynamic = ["version"]
license = {text = "MIT"}
requires-python = ">=3.9,<3.12"

[project.optional-dependencies]
dev = ["flake8", "black", "isort", "jupyter", "pytest"]

[tool.setuptools.packages.find]
exclude = ["dev"]
include = ["rgnn"]

[tool.setuptools.dynamic]
version = {attr = "rgnn.__version__"}

[tool.black]
line-length = 120

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]
